--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root {
     --primary-font: 'Roboto', sans-serif;
     --secondary-font: 'Raleway', sans-serif; 
-    --backround-main: #F4F4FD;
-    --background-secondary: #2E2F42;
+    --backround-light: #F4F4FD;
+    --background-dark: #2E2F42;
 } 
 
 .list {
@@ -58,7 +58,7 @@ body {
 }
 
 .header-web {
-    color: var(--background-secondary)
+    color: var(--background-dark);
 }
 
 .header {}
@@ -69,7 +69,7 @@ body {
 }
 
 .header-item {
-    color: var(--background-secondary)
+    color: var(--background-dark);
 }
 
 .nav .link:hover,
@@ -100,7 +100,7 @@ body {
 
 /* ============================== HERO  =============================== */
 .hero{
-    background: var(--background-secondary)
+    background: var(--background-dark);
 }
 
 .hero-title {
@@ -136,7 +136,6 @@ body {
 .feutures-item {}
 
 .feutures-text {
-    color: #434455;
     line-height: 1.5;
 }
 /* ============================== /FEUTURES ========================== */
@@ -155,13 +154,12 @@ body {
 .team-text {
     line-height: 1.5;
     text-align: center;
-    color: #434455;
 }
 /* ============================== /TEAM =============================== */
 
 /* ============================== FOOTER =============================== */
 .footer {
-    background: var(--background-secondary)
+    background: var(--background-dark);
 }
 
 .footer-logo {
@@ -170,7 +168,7 @@ body {
 }
 
 .footer-web {
-     color: #F4F4FD;
+     color: var(--backround-light);
 }
 
 .footer-text {
@@ -195,7 +193,7 @@ body {
 .portfolio-page-btn:hover,
 .portfolio-page-btn:focus {
     color: #FFFFFF;
-    background-color: #404BBF;;
+    background-color: #404BBF;
 }
 
 .portfolio-pg-namecard {
@@ -203,7 +201,7 @@ body {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: var(--background-secondary);
+    color: var(--background-dark);
 }
 
 .portfolio-pg-text {
@@ -211,6 +209,6 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;;
+    color: #434455;
 }
 /* ============================== /PORTFOLIO PAGE ======================= */
