--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #2E2F42;
+    color: var(--background-dark);
 }
 
 .feutures-subtitle,
@@ -37,8 +37,9 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
-    font-style: normal;
-    color: #2E2F42;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--background-dark);
 }
 
 .logo  {
@@ -57,7 +58,8 @@ body {
     color: #4D5AE5;
 }
 
-.header-web {
+.header-web,
+.header-item {
     color: var(--background-dark);
 }
 
@@ -68,12 +70,10 @@ body {
     line-height: 1.5;
 }
 
-.header-item {
-    color: var(--background-dark);
-}
-
 .nav .link:hover,
-.nav .link:focus {
+.nav .link:focus,
+.address-link:hover,
+.address-link:focus {
     color: #404BBF;
 }
 
@@ -81,17 +81,13 @@ body {
     color: #404BBF;
 }
 
-.address {}
-
-.address-list {
+.address {
     font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
 }
 
-.address-link:hover 
-.address-link:focus {
-    color: #404BBF;
+.address-list {
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .address-item {}
@@ -163,7 +159,7 @@ body {
 }
 
 .footer-logo {
-    line-height: 1.33;
+    line-height: 1.17;
     color: #4D5AE5;
 }
 
@@ -181,6 +177,7 @@ body {
 .portfolio-page-btn {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    font-size: 16px;
     line-height: 1.5;
     align-items: center;
     text-align: center;
