--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,8 @@ body {
 
 /* ============================== HEADER  =============================== */
 .header-logo {
-    line-height: 1.33;
-    color: var(--brand-color;
+    line-height: 1.17;
+    color: var(--brand-color);
 }
 
 .header-web,
@@ -82,11 +82,6 @@ body {
    color: var(--accent-color);
 }
 
-.address-link:hover,
-.address-link:focus {
-    color: var(--accent-color);
-}
-
 .header-list .link.current {
     color: var(--accent-color);
 }
@@ -96,6 +91,12 @@ body {
 .address-list {
     font-weight: 400;
     line-height: 1.5;
+    color: var(--color-text-main);
+}
+
+.address-link:hover,
+.address-link:focus {
+    color: var(--accent-color);
 }
 
 .address-item {
