--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ body {
 /* ============================== HEADER  =============================== */
 .header-logo {
     line-height: 1.17;
-    color: var(--brand-color);
+    color: var(--background-dark);
 }
 
 .header-web,
@@ -88,7 +88,8 @@ body {
 
 .address {}
 
-.address-list {
+.address-link {
+    font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     color: var(--color-text-main);
@@ -100,7 +101,6 @@ body {
 }
 
 .address-item {
-    font-style: normal;
 }
 
 /* ============================== /HEADER ============================= */
