--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@
     --color-text-main: #434455;
     --color-text-second: #8e8f99;
     --accent-lines: #e7e9fc;
-    --hero-background: #2e2f42;
 } 
 
 .list {
@@ -62,7 +61,7 @@ body {
 /* ============================== HEADER  =============================== */
 .header-logo {
     line-height: 1.17;
-    color: var(--background-dark);
+    color: var(--brand-color);
 }
 
 .header-web,
@@ -86,10 +85,11 @@ body {
     color: var(--accent-color);
 }
 
-.address {}
+.address {
+    font-style: normal;
+}
 
 .address-link {
-    font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     color: var(--color-text-main);
@@ -100,8 +100,7 @@ body {
     color: var(--accent-color);
 }
 
-.address-item {
-}
+.address-item {}
 
 /* ============================== /HEADER ============================= */
 
